--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="site.css"> 
-<link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css">    
+<link rel="stylesheet" href="./css/site.css"> 
+<link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/greenville.css">    
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
