--- a/project/homepage/cartcancel.html
+++ b/project/homepage/cartcancel.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="stylesheet" href="./css/login.css" />
 <link rel="stylesheet" href="./css/dropmenu.css" />
-  <link rel="stylesheet" href="site.css"> 
-<link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css"> 
+ <link rel="stylesheet" href="./css/site.css"> 
+<link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/greenville.css"> 
 <script src="./js/bikes.js"></script>
   <title>Cancel Reservation</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
@@ -120,7 +120,7 @@ $(document).ready(function () {
   const bookingId = urlParams.get('bookingid');
 
   $.ajax({
-    url: `https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Booking/${bookingId}`,
+    url: `https://api242.onrender.com/Booking/${bookingId}`,
     method: "GET",
     success: function (bookings) {
       if (!Array.isArray(bookings) || bookings.length === 0) {
@@ -198,7 +198,7 @@ async function confirmCancellation() {
     const cartId = urlParams.get("cartid");
 
     // 1️⃣ Load cart
-    const cart = await api(`https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Cart/${cartId}`);
+    const cart = await api(`https://api242.onrender.com/Cart/${cartId}`);
     const refundAmount = parseFloat($("#totalAmount").text());
 
     alert(`Reservation will be cancelled.\nRefund Amount: $${refundAmount}`);
@@ -209,7 +209,7 @@ async function confirmCancellation() {
 
     // 3️⃣ Update booking
     await api(
-      `https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Booking/${bookingId}`,
+      `https://api242.onrender.com/Booking/${bookingId}`,
       "PUT",
       {
         reservationstatus: "Cancelled",
@@ -242,7 +242,7 @@ async function reversepayment(reverseId) {
   const bookingId = urlParams.get("bookingid");
 
   // 1️⃣ Load booking
-  const bookings = await api(`https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Booking/${bookingId}`);
+  const bookings = await api(`https://api242.onrender.com/Booking/${bookingId}`);
   const booking = bookings[0];
 
   const refundAmount = parseFloat(booking.totalAmount);
@@ -275,7 +275,7 @@ async function reversepayment(reverseId) {
  console.log(payment);
   
   // ✅ Post reversal
-  await api("https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Payments", "POST", payment);
+  await api("https://api242.onrender.com/Payments", "POST", payment);
 
   // 3️⃣ Build refund record
   const refund = {
@@ -300,7 +300,7 @@ async function reversepayment(reverseId) {
   console.log(refund);
   
   // ✅ Post refund
-  await api("https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Refunds", "POST", refund);
+  await api("https://api242.onrender.com/Refunds", "POST", refund);
 }
 
 </script>
