--- a/project/homepage/cartdetail.html
+++ b/project/homepage/cartdetail.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/login.css" />
   <link rel="stylesheet" href="./css/dropmenu.css" />
-  <link rel="stylesheet" href="site.css"> 
-<link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css"> 
+  <link rel="stylesheet" href="./css/site.css"> 
+<link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/greenville.css"> 
   <script src="./js/bikes.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <title>Transaction Detail Review</title>
   <style>
