--- a/project/homepage/cartmaster.html
+++ b/project/homepage/cartmaster.html
@@ -2,20 +2,17 @@
 <html lang="en">
 <head>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/login.css" />
-  <link rel="stylesheet" href="./css/dropmenu.css" />
-  <link rel="stylesheet" href="site.css"> 
-<link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css"> 
-  <script src="./js/bikes.js"></script>
-  <title>Parks - User Master Summary</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<link rel="stylesheet" href="./css/login.css" />
+<link rel="stylesheet" href="./css/dropmenu.css" />
+<link rel="stylesheet" href="./css/site.css"> 
+<link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/greenville.css"> 
+<script src="./js/bikes.js"></script>
+<title>Parks - User Master Summary</title>
+
 <style>
 #userGreeting
 {
@@ -66,6 +63,9 @@ font-size: 12pt;
       <div class="nav-right">
         <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
         <span id="H3UserBanner"></span>
+        <a href="index.html" id="loginBtn" class="btn secondary-btn">Home</a>
+        <a href="userhelp.html" id="loginBtn" class="btn secondary-btn">UserHelp</a>
+        <a href="usernotices.html" id="loginBtn" class="btn secondary-btn">UserNotices</a>
         <a href="login.html" id="loginBtn" class="btn secondary-btn" onclick="loginUser(event)">Login</a>
         <a href="login.html" id="logoutBtn" class="btn secondary-btn" onclick="logoutUser(event)">Logout</a>
                 <a href="cartreview.html" id="cartBtn3"><img src="./images/cart4.png" width="40px" height="40px"></a>
@@ -94,7 +94,7 @@ async function loadCartMasters() {
 
   try {
     // Fetch ALL CartMaster records (array)
-    const res = await fetch("https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/CartMaster");
+    const res = await fetch("https://api242.onrender.com/CartMaster");
     if (!res.ok) throw new Error("Failed to fetch CartMaster list");
     const allCartMasters = await res.json();
 
