--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -5,9 +5,9 @@
 <title>Mountain Bike Parks | Greenville Enterprise Software</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="site.css">
-<link rel="stylesheet" href="layout.css">
-<link rel="stylesheet" href="greenville.css">
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
