--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="site.css">
-<link rel="stylesheet" href="layout.css">
-<link rel="stylesheet" href="greenville.css">
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <title>My Cart | Greenville Enterprise Software</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -176,11 +176,11 @@
       return;
     }
 
-    $.get("https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Parks", function (parks) {
+    $.get("https://api242.onrender.com/Parks", function (parks) {
       const parkMap = {};
       parks.forEach(p => parkMap[p.parkId] = p);
 
-      $.get("https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Cart", function (cart) {
+      $.get("https://api242.onrender.com/Cart", function (cart) {
         const userItems = cart.filter(item => item.uid === uid && item.isCheckedOut !== 1 && item.isCheckedOut !== 2);
         if (userItems.length === 0) {
           $("#cart-items").html(`<div class="alert alert-info">No Transactions Pending for UID ${uid}.</div>`);
@@ -264,7 +264,7 @@
     if (!confirm("Are you sure you want to remove this item from your cart?")) return;
 
     $.ajax({
-      url: `https://parksapi-h8btdjefb3gpdxaf.westus3-01.azurewebsites.net/api/Cart/${cartId}`,
+      url: `https://api242.onrender.com/Cart/${cartId}`,
       type: "PUT",
       contentType: "application/json",
       data: JSON.stringify({ isCheckedOut: 2 }),
