--- a/project/homepage/paynow2.html
+++ b/project/homepage/paynow2.html
@@ -5,7 +5,7 @@
   <title>Complete Payment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="login.css" />
-  <link rel="stylesheet" href="dropmenu.css" />
+  <link rel="stylesheet" href="./css/dropmenu.css" />
   <script src="./js/bikes.js"></script>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
