--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -10,64 +10,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-    /* HERO SECTION */
-    .hero {
-        background: #0a2f1f;
-        color: white;
-        padding: 80px 20px;
-        text-align: center;
-    }
-
-    .hero h2 {
-        margin: 0;
-        font-size: 2.2rem;
-    }
-
-    .hero p {
-        margin-top: 15px;
-        font-size: 1.2rem;
-        color: #d1e7d9;
-    }
-
-    /* THREE-COLUMN SECTION */
-    .welcome-columns {
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
-        width: 85%;
-        margin: 40px auto;
-    }
-
-    .welcome-card {
-        flex: 1;
-        background: #ffffff;
-        border: 1px solid #d1e7d9;
-        border-radius: 6px;
-        padding: 25px;
-    }
-
-    .welcome-images img {
-        width: 48%;
-        border-radius: 5px;
-    }
-
-    .sitemap-table {
-        width: 100%;
-        border-collapse: collapse;
-    }
-
-    .sitemap-table th,
-    .sitemap-table td {
-        padding: 8px;
-        border-bottom: 1px solid #d1e7d9;
-        text-align: left;
-    }
+   
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<div class="gacontainer">
 
 <!-- TOP NAV -->
 <div class="topnav">
