--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -37,7 +37,7 @@
 
 <body>
 
-<div class="container">
+<div class="gacontainer">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -150,7 +150,7 @@
         </div>
     </div>
 </div>
-<div class="container">
+<div class="gacontainer">
 <section class="middle-columns">
 
     <div class="mid-col">
