--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -315,9 +315,12 @@ loadReviews();
 </div>
 </section>
 </div>
-<div class="footer"> © 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
 </div>
 </body>
+<!-- FOOTER -->
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
 </html>
 
 
