--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="./css/site.css">
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/greenville.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>Greenville Associates Enterprise Software | Welcome</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -16,7 +16,7 @@
 
 <body>
 
-<div class="gacontainer">
+<div class="container">
 
 <!-- TOP NAV -->
 <div class="topnav">
@@ -51,9 +51,9 @@
 </header>
 
 <!-- HERO SECTION -->
-<section class="hero">
+<section class="hero" style="background-color: white;">
     <h2>Welcome to Greenville Associates Enterprise Licensing</h2>
-    <p>Your central hub for software licensing, product access, and enterprise resources.</p>
+    <span>Your central hub for software licensing, product access, and enterprise resources.</span>
 </section>
 
 <!-- THREE COLUMN SECTION -->
