--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -44,7 +44,8 @@
 </head>
 <body class="bg-light">
 
-<div class="container py-4">
+    <div class="bigwrapper" style="background-color: black; width:100%;">
+    <div class="container py-4">
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Reviews</h2>
@@ -68,6 +69,7 @@
         <tbody></tbody>
     </table>
 
+</div>
 </div>
 
 <!-- ADD REVIEW MODAL -->
