--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -11,67 +11,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-/* HERO BANNER */
-.hero {
-    background: #0a2f1f;
-    color: white;
-    padding: 60px 20px;
-    text-align: center;
-}
-
-/* CART CARD HIGHLIGHT */
-.highlight {
-    background-color: #e0f3ff !important;
-}
-
-.selected {
-    border: 2px solid #198754;
-}
-
-.park-logo {
-    width: 40px;
-    height: 40px;
-    object-fit: contain;
-    margin-right: 8px;
-}
-
-/* THREE-COLUMN FOOTER SECTION */
-.welcome-columns {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    width: 85%;
-    margin: 40px auto;
-}
-
-.welcome-card {
-    flex: 1;
-    background: #ffffff;
-    border: 1px solid #d1e7d9;
-    border-radius: 6px;
-    padding: 25px;
-}
-
-.welcome-images img {
-    width: 48%;
-    border-radius: 5px;
-}
-
-.sitemap-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.sitemap-table th,
-.sitemap-table td {
-    padding: 8px;
-    border-bottom: 1px solid #d1e7d9;
-    text-align: left;
-}
 </style>
 </head>
 
-<body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
+<body onload="checkpll(); checkUserStatus(); displayProfilePicture();" style="background-color:black;">
 
 <!-- NAV -->
 <div class="topnav">
@@ -104,7 +47,7 @@
 </header>
 
 <!-- HERO -->
-<section class="hero">
+<section class="somehero">
     <h2>Your Cart</h2>
     <p>Review your selected licenses and proceed to checkout.</p>
 </section>
