--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -1,5 +1,10 @@
 <html>
   <head>
+  <!--John S. Stritzinger
+      CSCE242
+      Assignment8
+      Conditionals -->
+    
   <title>Assignment8 Conditionals</title>
   <link rel="stylesheet" href="./css/a8styles.css">
   <script src="./js/a8script.js"></script>  
