--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -57,6 +57,8 @@ function ex1() {
 function ex2() {
   document.getElementById("conditionalquestion").innerHTML =
     "Countdown to class";
+
+  const message = getExercise2Message(); document.getElementById("message").textContent = message;
 }
 
 /* ---------------- TIME CALCULATION ---------------- */
