--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -14,17 +14,16 @@
 <section id="secone">
   <h1>Assignment 8</h1>
 
-  <span id="selector">
-    <h4 id="q1" onclick="ex1();">Exercise 1</h4> |
-    <h4 id="q2" onclick="ex2();">Exercise 2</h4>
-  </span>
+  <span id="selector"> <h4 id="q1" onclick="ex1();">Exercise 1&nbsp|&nbsp</h4><h4 id="q2" onclick="ex2();">Exercise 2</h4> </span>
 
-  <div id="mobilemenu">
-    <ul id="hiding">
-      <li>Exercise 1</li>
-      <li>Exercise 2</li>
-    </ul>
-  </div>
+<div id="mobilemenu"> 
+  Menu 
+  <span class="arrow">▼</span> 
+  <ul id="hiding"> 
+    <li onclick="ex1()">Exercise 1</li> 
+    <li onclick="ex2()">Exercise 2</li> 
+  </ul> 
+</div>
 
   <div id="conditionalquestion"></div>
 
