--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>Assignment 8 Conditionals</title>
   <link rel="stylesheet" href="./css/a8styles.css">
-  <script src="./js/a8script.js"></script>
+  <script src="./js/a8scripts.js"></script>
 
   <style>
     #secone { text-align: center; }
