--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -31,7 +31,7 @@
   <p id="message"></p>
 </section>
 
-<footer>&copy;2026 - Cocky Consulting, Inc. Assignment 8. All Rights Reserved</footer>
+<footer class="footer">&copy;2026 - Cocky Consulting, Inc. Assignment 8. All Rights Reserved</footer>
 
 <script>
 
