--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -7,14 +7,18 @@
   <style>
     #secone { text-align: center; }
     #hiding { display: none; }
+    .pagecontainer { position: relative; margin 0 auto; max-width=1600px; background-color: lightgrey;}
+    body { background-color: purple;}
   </style>
 </head>
 
 <body>
+
+<div class="pagecontainer">
 <section id="secone">
   <h1>Assignment 8</h1>
 
-  <span id="selector"> <h4 id="q1" onclick="ex1();">Exercise 1&nbsp|&nbsp</h4><h4 id="q2" onclick="ex2();">Exercise 2</h4> </span>
+  <div><span id="selector"> <h4 id="q1" onclick="ex1();">Exercise 1&nbsp|&nbsp</h4><h4 id="q2" onclick="ex2();">Exercise 2</h4> </span></div>
 
 <div id="mobilemenu"> 
   Menu 
@@ -32,7 +36,7 @@
 </section>
 
 <footer class="footer">&copy;2026 - Cocky Consulting, Inc. Assignment 8. All Rights Reserved</footer>
-
+</div>
 <script>
 
 </script>
