--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -15,11 +15,6 @@
 <body>
 
 <div class="pagecontainer">
-<section id="secone">
-  <h1>Assignment 8</h1>
-
-  <div><span id="selector"> <h4 id="q1" onclick="ex1();">Exercise 1&nbsp|&nbsp</h4><h4 id="q2" onclick="ex2();">Exercise 2</h4> </span></div>
-
 <div id="mobilemenu"> 
   Menu 
   <span class="arrow">▼</span> 
@@ -28,8 +23,11 @@
     <li onclick="ex2()">Exercise 2</li> 
   </ul> 
 </div>
+<section id="secone">
+  <h1>Assignment 8</h1>
 
-  <div id="conditionalquestion"></div>
+ <div id="selector"> <span id="q1" onclick="ex1();">Exercise 1&nbsp|&nbsp</span><span id="q2" onclick="ex2();">Exercise 2</span></div>
+ <div id="conditionalquestion"></div>
 
   <input type="range" min="0" max="60" value="60" id="timeSlider">
   <p id="message"></p>
