--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -16,8 +16,7 @@
 
 <div class="pagecontainer">
 <div id="mobilemenu"> 
-  Menu 
-  <span class="arrow">▼</span> 
+  <span class="arrow">▼</span> <span>Menu</span id="SiteMenu">Menu</span>
   <ul id="hiding"> 
     <li onclick="ex1()">Exercise 1</li> 
     <li onclick="ex2()">Exercise 2</li> 
