--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -13,7 +13,9 @@
 
 <div class="pagecontainer">
 <div id="mobilemenu"> 
-  <span class="arrow">▼</span> <span>Menu</span id="SiteMenu">Menu</span>
+<span class="arrow">▼</span>
+<span id="SiteMenu">Menu</span>
+
   <ul id="hiding"> 
     <li onclick="ex1()">Exercise 1</li> 
     <li onclick="ex2()">Exercise 2</li> 
