--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="pagecontainer">
-<div id="mobilemenu"> 
+<div id="topnavbar"><div id="mobilemenu"> 
 <span class="arrow">▼</span>
 <span id="SiteMenu">Menu</span>
 
@@ -20,7 +20,7 @@
     <li onclick="ex1()">Exercise 1</li> 
     <li onclick="ex2()">Exercise 2</li> 
   </ul> 
-</div>
+</div></div>
 <section id="secone">
   <h1>Assignment 8</h1>
 
