--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -13,7 +13,7 @@
 
 <div class="pagecontainer">
 <div id="topnavbar"><div id="mobilemenu"> 
-<span class="arrow">▼</span>
+<span class="arrow">▼&nbsp&nbsp</span>
 <span id="SiteMenu">Menu</span>
 
   <ul id="hiding"> 
