--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -14,14 +14,9 @@
 <div class="pagecontainer">
 
   <div id="topnavbar">
-    <div id="mobilemenu">
-      <span class="arrow">▼&nbsp;&nbsp;</span>
-      <span id="SiteMenu">Menu</span>
-
-      <ul id="hiding">
-        <li id="mobile-ex1">Exercise 1</li>
-        <li id="mobile-ex2">Exercise 2</li>
-      </ul>
+    <div id="mobilemenu"> 
+       <div id="mobilemenu-header"> <span class="arrow">▼&nbsp;&nbsp;</span> <span id="SiteMenu">Menu</span> </div> 
+       <ul id="hiding"> <li id="mobile-ex1">Exercise 1</li> <li id="mobile-ex2">Exercise 2</li> </ul> 
     </div>
   </div>
 
