--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -31,7 +31,8 @@
     <div id="conditionalquestion"></div>
 
     <input type="range" min="0" max="60" value="60" id="timeSlider">
-    <p id="message"></p>
+    <p id="timevariable"></p>
+     <p id="message"></p>
   </section>
 
   <footer class="footer">
