--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -2,6 +2,13 @@
 <!-John Stritzinger
    CSCE242
    Spring 2026
+   This assignment has a menu which is hidden except by media check.
+   This assignment without the media check shows the instructors Exercises.
+   The assignment uses a main page container centered and relative.
+   This assignment has a footer bar which is always visible.
+   Everything has been moved to External CSS.
+   Everything has been moved to External JS with listeners rather than onclick calls...(which we prefer but noted the directions).
+   In general we believe lambda functions are less readable than regular functions but we note the instructors preferences.
   -->
 <head>
   <title>Assignment 8 Conditionals</title>
@@ -22,7 +29,7 @@
 
   <section id="secone">
     <h1>Assignment 8</h1>
-
+    <h3>If Statements</h3>
     <div id="selector">
       <span id="q1">Exercise 1&nbsp;|&nbsp;</span>
       <span id="q2">Exercise 2</span>
