--- a/assignments/8-conditionals/index.html
+++ b/assignments/8-conditionals/index.html
@@ -29,7 +29,7 @@
 
   <section id="secone">
     <h1>Assignment 8</h1>
-    <h3>If Statements</h3>
+    <h3>If Statements</h3><BR><BR>
     <div id="selector">
       <span id="q1">Exercise 1&nbsp;|&nbsp;</span>
       <span id="q2">Exercise 2</span>
